--- a/html/popup.html
+++ b/html/popup.html
@@ -11,6 +11,7 @@
             <div id='more'><img src='/assets/images/popup/popup-more.svg'></div>
             <div id='more-select'>
                 <a id="shortcuts">Keyboard shortcuts</a>
+                <a id="quality">Smaller file size</a>
                 <a href="https://github.com/alyssaxuu/screenity" target="_blank">GitHub</a>
                 <a href="https://chrome.google.com/webstore/detail/screenity-screen-recorder/kbbdabhdfibnancpjfhlkhafgdilcnji" target="_blank">Rate extension</a>
                 <a href="https://twitter.com/alyssaxuu" target="_blank">Made by Alyssa X</a>
