--- a/html/popup.html
+++ b/html/popup.html
@@ -13,8 +13,8 @@
                 <a id="shortcuts">Keyboard shortcuts</a>
                 <a id="quality">Smaller file size</a>
                 <a href="https://github.com/alyssaxuu/screenity" target="_blank">GitHub</a>
-                <a href="https://chrome.google.com/webstore/detail/screenity-screen-recorder/kbbdabhdfibnancpjfhlkhafgdilcnji" target="_blank">Rate extension</a>
-                <a href="https://twitter.com/alyssaxuu" target="_blank">Made by Alyssa X</a>
+                <a id="rateextension" href="https://chrome.google.com/webstore/detail/screenity-screen-recorder/kbbdabhdfibnancpjfhlkhafgdilcnji" target="_blank">Rate extension</a>
+                <a id="madeby" href="https://twitter.com/alyssaxuu" target="_blank">Made by Alyssa X</a>
             </div>
         </div>
         <div id='tabs'>
@@ -25,35 +25,35 @@
             </div>
         </div>
         <div id='body'>
-            <label for="camera-select">Camera</label>
+            <label id="camera-select-label" for="camera-select">Camera</label>
             <select id="camera-select"><option value='disabled'>Disabled</option></select>
             <label class='check'>
               <input id='flip' type='checkbox'>
               <span></span>
-                Flip camera
+                <labelp id="flip-label">Flip camera</labelp>
             </label>
             <label for="mic-select" id="mic-label">Microphone</label>
             <select id="mic-select"><option value='disabled'>Disabled</option></select>
             <label class='check'>
               <input id='push' type='checkbox'>
               <span></span>
-                Push to talk (Ctrl+M)
+                <labelp id="push-label">Push to talk</labelp> (Ctrl+M)
             </label>
             <label class='check'>
               <input type='checkbox' id="countdown">
               <span></span>
-                <p id='count-select'>3 second</p> countdown
+                <p id='count-select'>3 <labelp id="second-label">second</labelp></p> <labelp id="countdown-label">countdown</labelp>
             </label>
             <label class='check'>
               <input id='persistent' type='checkbox'>
               <span></span>
-                Only show toolbar on hover
+                <labelp id="hover-label">Only show toolbar on hover</labelp>
             </label>
             <button id="record" style="margin-top: 10px" class="record-disabled">Loading...</button>
             <div id='countdown-select'>
-                <div id='3-seconds' class='countdown'>3 seconds</div>
-                <div id='5-seconds' class='countdown'>5 seconds</div>
-                <div id='10-seconds' class='countdown'>10 seconds</div>
+                <div id='3-seconds' class='countdown'>3 <labelp class="seconds-label">seconds</labelp></div>
+                <div id='5-seconds' class='countdown'>5 <labelp class="seconds-label">seconds</labelp></div>
+                <div id='10-seconds' class='countdown'>10 <labelp class="seconds-label">seconds</labelp></div>
             </div>
         </div>
         <script src="../js/libraries/jquery-3.5.1.min.js"></script>
