--- a/html/videoeditor.html
+++ b/html/videoeditor.html
@@ -56,6 +56,11 @@
             <div id="apply-remove">Apply</div>
             <div id="removeslider"></div>
             <div id="reset">Reset changes (revert to initial recording)</div>
+            <label id="filename-select-label" for="filename-select">File name</label>
+            <select id="filename-select">
+                <option value="random">Random filename (default)</option>
+                <option value="timestamp">ISO Timestamp</option>
+            </select>
         </div>
         <div id="export">
             <div id="export-cont">
