--- a/html/popup.html
+++ b/html/popup.html
@@ -12,6 +12,7 @@
             <div id='more-select'>
                 <a id="shortcuts">Keyboard shortcuts</a>
                 <a id="quality">Smaller file size</a>
+                <a id="fps">60FPS video</a>
                 <a href="https://github.com/alyssaxuu/screenity" target="_blank">GitHub</a>
                 <a id="rateextension" href="https://chrome.google.com/webstore/detail/screenity-screen-recorder/kbbdabhdfibnancpjfhlkhafgdilcnji" target="_blank">Rate extension</a>
                 <a id="madeby" href="https://twitter.com/alyssaxuu" target="_blank">Made by Alyssa X</a>
