--- a/html/popup.html
+++ b/html/popup.html
@@ -43,7 +43,7 @@
             <label class='check'>
               <input type='checkbox' id="countdown">
               <span></span>
-                <p id='count-select'>3 <labelp id="second-label">second</labelp></p> <labelp id="countdown-label">countdown</labelp>
+                <p id='count-select'><text id='countdown-time'>3 </text><labelp id="second-label">second</labelp></p> <labelp id="countdown-label">countdown</labelp>
             </label><br>
             <label class='check'>
               <input id='persistent' type='checkbox'>
