Invalid id reference for labels
Was working on a fork, and my code sniffer noticed this.

--- a/html/videoeditor.html
+++ b/html/videoeditor.html
@@ -36,22 +36,22 @@
             <label id="trim-label">Trim video</label>
             <div id="trim-start">
                 <label for="tstart" class="start-label">Start</label>
-                <input name="tstart" disabled value="00:00:00">
+                <input id="tstart" name="tstart" disabled value="00:00:00">
             </div>
             <div id="trim-end">
                 <label for="tend" class="end-label">End</label>
-                <input name="tend" disabled value="00:00:00">
+                <input id="tend" name="tend" disabled value="00:00:00">
             </div>
             <div id="apply-trim">Apply</div>
             <div id="trimslider"></div>
             <label id="remove-label">Remove part of the video</label>
             <div id="remove-start">
                 <label for="rstart" class="start-label">Start</label>
-                <input name="rstart" disabled value="00:00:00">
+                <input id="rstart" name="rstart" disabled value="00:00:00">
             </div>
             <div id="remove-end">
                 <label for="rend" class="end-label">End</label>
-                <input name="rend" disabled value="00:00:00">
+                <input id="rend" name="rend" disabled value="00:00:00">
             </div>
             <div id="apply-remove">Apply</div>
             <div id="removeslider"></div>
