chore: run prettier

--- a/html/camera.html
+++ b/html/camera.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="margin: 0px;overflow:hidden;">
-<script src="../js/camera.js"></script>
-</body>
+  <body style="margin: 0px; overflow: hidden">
+    <script src="../js/camera.js"></script>
+  </body>
 </html>
