Replace incorrect html tag 'labelp' with correct 'label' tag

--- a/html/popup.html
+++ b/html/popup.html
@@ -31,30 +31,30 @@
             <label class='check'>
               <input id='flip' type='checkbox'>
               <span></span>
-                <labelp id="flip-label">Flip camera</labelp>
+                <label id="flip-label">Flip camera</label>
             </label>
             <label for="mic-select" id="mic-label">Microphone</label>
             <select id="mic-select"><option value='disabled'>Disabled</option></select>
             <label class='check'>
               <input id='push' type='checkbox'>
               <span></span>
-                <labelp id="push-label">Push to talk</labelp> (Ctrl+M)
+                <label id="push-label">Push to talk</label> (Ctrl+M)
             </label><br>
             <label class='check'>
               <input type='checkbox' id="countdown">
               <span></span>
-                <p id='count-select'><text id='countdown-time'>3 </text><labelp id="second-label">second</labelp></p> <labelp id="countdown-label">countdown</labelp>
+                <p id='count-select'><text id='countdown-time'>3 </text><label id="second-label">second</label></p> <label id="countdown-label">countdown</label>
             </label><br>
             <label class='check'>
               <input id='persistent' type='checkbox'>
               <span></span>
-                <labelp id="hover-label">Only show toolbar on hover</labelp>
+                <label id="hover-label">Only show toolbar on hover</label>
             </label>
             <button id="record" style="margin-top: 10px" class="record-disabled">Loading...</button>
             <div id='countdown-select'>
-                <div id='3-seconds' class='countdown'>3 <labelp class="seconds-label">seconds</labelp></div>
-                <div id='5-seconds' class='countdown'>5 <labelp class="seconds-label">seconds</labelp></div>
-                <div id='10-seconds' class='countdown'>10 <labelp class="seconds-label">seconds</labelp></div>
+                <div id='3-seconds' class='countdown'>3 <label class="seconds-label">seconds</label></div>
+                <div id='5-seconds' class='countdown'>5 <label class="seconds-label">seconds</label></div>
+                <div id='10-seconds' class='countdown'>10 <label class="seconds-label">seconds</label></div>
             </div>
         </div>
         <script src="../js/libraries/jquery-3.5.1.min.js"></script>
