--- a/html/settings.html
+++ b/html/settings.html
@@ -13,19 +13,19 @@
             <label class='check'>
               <input id='flip-camera' type='checkbox'>
               <span></span>
-              <labelp id="flip-label">Flip camera horizontally</labelp>
+              <label id="flip-label">Flip camera horizontally</label>
             </label>
             <label for="audio-select" id="mic-label">Microphone source</label>
             <select id="audio-select"></select>
             <label class='check'>
               <input id='push-talk' type='checkbox'>
               <span></span>
-                <labelp id="push-label">Push to talk (Ctrl+M)</labelp>
+                <label id="push-label">Push to talk (Ctrl+M)</label>
             </label>
             <label class='check'>
               <input type='checkbox' id="persistent">
               <span></span>
-                <labelp id="hover-label">Only show toolbar on hover</labelp>
+                <label id="hover-label">Only show toolbar on hover</label>
             </label>
         </div>
         </div>
