--- a/html/videoeditor.html
+++ b/html/videoeditor.html
@@ -15,12 +15,12 @@
                 <img id="main-logo" src="../assets/images/popup/popup-logo.svg">
                 <h1>Screenity</h1>
                 <span class="vertical-line"></span>
-                <a href="https://alyssax.com" target="_blank" id="credits"><labelp id="made-with">Made with</labelp> <img src="../assets/images/editor/heart.svg"> <labelp id="by-alyssa">by Alyssa X</labelp></a>
+                <a href="https://alyssax.com" target="_blank" id="credits"><label id="made-with">Made with</label> <img src="../assets/images/editor/heart.svg"> <label id="by-alyssa">by Alyssa X</label></a>
             </div>
             <div id="links">
                 <a href="https://github.com/alyssaxuu/screenity" target="_blank">Github</a>
                 <a href="https://twitter.com/alyssaxuu" target="_blank">Twitter</a>
-                <a id="rate" href="https://chrome.google.com/webstore/detail/screenity-screen-recorder/kbbdabhdfibnancpjfhlkhafgdilcnji" target="_blank"><img src="../assets/images/editor/star.svg"> <labelp id="rate-label">Rate extension</labelp></a>
+                <a id="rate" href="https://chrome.google.com/webstore/detail/screenity-screen-recorder/kbbdabhdfibnancpjfhlkhafgdilcnji" target="_blank"><img src="../assets/images/editor/star.svg"> <label id="rate-label">Rate extension</label></a>
             </div>
             <div id="show-hide">Show/hide options</div>
         </div>
@@ -59,7 +59,7 @@
         </div>
         <div id="export">
             <div id="export-cont">
-                <div id="download"><img src="../assets/images/editor/download.svg"> <labelp id="download-label">Download</labelp></div>
+                <div id="download"><img src="../assets/images/editor/download.svg"> <label id="download-label">Download</label></div>
                 <div id="share"><img src="../assets/images/editor/drive.svg"> <span>Save to Drive</span></div>
             </div>
         </div>
