--- a/html/videoeditor.html
+++ b/html/videoeditor.html
@@ -17,6 +17,13 @@
                 <span class="vertical-line"></span>
                 <a href="https://alyssax.com" target="_blank" id="credits"><labelp id="made-with">Made with</labelp> <img src="../assets/images/editor/heart.svg"> <labelp id="by-alyssa">by Alyssa X</labelp></a>
             </div>
+            <div id="logo">
+                <img id="main-logo" src="../assets/images/popup/popup-logo.svg">
+                <h1>Screenity</h1>
+                <span class="vertical-line"></span>
+                <a href="https://alyssax.com" target="_blank" id="credits"><labelp id="made-with">Made with</labelp> <img src="../assets/images/editor/heart.svg"> <labelp id="by-alyssa">by Alyssa X</labelp></a>
+            </div>
+
             <div id="links">
                 <a href="https://github.com/alyssaxuu/screenity" target="_blank">Github</a>
                 <a href="https://twitter.com/alyssaxuu" target="_blank">Twitter</a>
