--- a/src/pages/Editor/index.html
+++ b/src/pages/Editor/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Screenity - Video editor</title>
+    <title>Demokraft - Video editor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 
