--- a/src/pages/Playground/index.html
+++ b/src/pages/Playground/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Screenity - Playground</title>
+    <title>Demokraft - Playground</title>
     <style>
       @font-face {
         font-family: Satoshi-Light;
