--- a/src/pages/Sandbox/index.html
+++ b/src/pages/Sandbox/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Screenity - Video editor</title>
+    <title>Demokraft - Video editor</title>
     <style>
       @font-face {
         font-family: Satoshi-Light;
